--- a/settings.properties
+++ b/settings.properties
@@ -1,6 +1,6 @@
 SNAPSHOOT_DIRECTORY=G:/testFile/
 FILE_SEGMENT_SIZE=128
-SERVER_ADDRESS=172.16.0.193
+SERVER_ADDRESS=localhost
 CLIENT_PORT=10086
 
 STORAGE_DIRECTORY=G:/receiveFile/
